crates/toml/tests/snapshots/invalid/table/whitespace.stderr
TOML parse error at line 1, column 9
  |
1 | [invalid key]
  |         ^
unclosed table, expected `]`
